# Banking-System

./: .gitignore  CMakeLists.txt  README.md  SETUP.md
database/: schema.sql
include/core/: Account.h  Admin.h  BankService.h  Customer.h  Transaction.h  User.h
include/gui/: AdminDashboard.h  AdminManagementWindow.h  CustomerDashboard.h  DepositWindow.h  LoginWindow.h  OTPDialog.h  ReportsWindow.h  TransactionHistoryWindow.h  TransferWindow.h  WithdrawalWindow.h
include/security/: AuthManager.h  DatabaseManager.h  Logger.h  OTPManager.h  SecurityManager.h
src/: main.cpp
src/core/: Account.cpp  Admin.cpp  BankService.cpp  Customer.cpp  Transaction.cpp  User.cpp
src/gui/: AdminDashboard.cpp  AdminManagementWindow.cpp  CustomerDashboard.cpp  DepositWindow.cpp  LoginWindow.cpp  OTPDialog.cpp  ReportsWindow.cpp  TransactionHistoryWindow.cpp  TransferWindow.cpp  WithdrawalWindow.cpp
src/security/: AuthManager.cpp  DatabaseManager.cpp  Logger.cpp  OTPManager.cpp  SecurityManager.cpp
